# AI-DayTrading-AntiGravityVersion

./: .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  create_release.py  docker-compose.yml  pyproject.toml  requirements.txt  verify_iteration_2.py  verify_setup.py
src/: app.py  config.py  main.py
src/analysis/: ai_analyst.py  prompts.py  technical.py  valuation.py
src/backtesting/: engine.py
src/execution/: alpaca_engine.py  paper_engine.py
src/infrastructure/: cache.py  throttling.py
src/models/: domain.py  risk.py  trading.py  watchlist.py
src/providers/: alpha_vantage.py  base.py  yahoo.py
src/reporting/: performance.py
src/services/: market_data.py  portfolio_manager.py  scanner.py  scheduler.py
src/strategies/: base.py  rsi_reversion.py  sma_crossover.py
src/ui/: cli.py
