[project]
name = "ai-day-trading-app"
version = "0.1.0"
description = "AI-powered day trading agentic system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.36",
    "alpha-vantage>=2.3.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "redis>=5.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
